# bhu_text_mining

./: .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  conftest.py  flake.nix  mkdocs.yml  pipeline_batch_evaluation.py  pipeline_evaluation.py  pipeline_ocr.py  pipeline_topics.py  pipepline_ocr.py  pyproject.toml  week.yaml.example
.agent-comm/orchestrator/: auditor-directive.yaml  developer-directive.yaml  tester-directive.yaml
.agent-comm/shared/: current-phase.yaml  project-context.yaml
.agent-comm/speckit-orchestrator/: session.yaml  speckit-plan.json
.agent-comm/speckit-orchestrator/developer/completed/: T001.yaml  T002.yaml  T003.yaml  T004.yaml  T005.yaml  T006.yaml  T007.yaml  T008.yaml  T009.yaml  T010.yaml  T011.yaml  T012.yaml  T013.yaml  T014.yaml  T015.yaml  T016.yaml  T017.yaml  T018.yaml  T019.yaml  T020.yaml  T021-fix.yaml  T021.yaml  T022.yaml  T023.yaml  T024.yaml  T025.yaml  T026.yaml  T027.yaml  T028.yaml  T029.yaml  T030.yaml  T031.yaml  T032.yaml  T033.yaml  T034-fix.yaml  T034.yaml  T035.yaml  T036.yaml  T037.yaml  T038.yaml  (+10 more)
.github/workflows/: ci.yml  docs.yml
.specify/memory/: constitution.md
_workspace/: audit_layer1_static.md  audit_layer2_contracts.md  audit_layer3_integration.md  audit_layer4_e2e.md  audit_layer5_consistency.md  audit_layer6_adversary.md  audit_layer7_security.md  audit_layer8_comfortableness.md  audit_plan.md  audit_summary.md
docs/: cli-reference.md  config-setup-guide.md  configuration.md  data-formats.md  for_new_teachers.md  improvement_plan_v2.yaml  index.md  quickstart.md  review_summary.md  weekly-workflow.md
exams/: Ch01_서론_FormativeTest.yaml  questions.yaml
improve/: idea.md
scripts/: pipeline_topics.py  test_qr_only.py
src/: cli.py  cli_ocr.py  concept_checker.py  config.py  ensemble_scorer.py  evaluation_io.py  evaluation_types.py  exam_generator.py  feedback_generator.py  font_utils.py  graph_comparator.py  graph_visualizer.py  knowledge_graph_analysis.py  lecture_processor.py  llm_evaluator.py  longitudinal_store.py  naver_ocr.py  network_analysis.py  ocr_pipeline.py  pipeline_batch_evaluation.py  pipeline_evaluation.py  preprocess_imgs.py  prompt_templates.py  qr_decode.py  report_generator.py  response_converter.py  statistical_analysis.py  tesseract_processor.py  topic_analysis.py  triplet_extractor.py  visualize_cohesion.py
src/bhu_text_mining/: cohesion_analysis.py  naver_ocr.py  network_analysis.py  preprocess_imgs.py  sample.py  topic_analysis.py  visualize_cohesion.py
src/forma/: __init__.py  chart_utils.py  class_knowledge_aggregate.py  cli.py  cli_backfill_longitudinal.py  cli_deliver.py  cli_domain.py  cli_init.py  cli_intervention.py  cli_lecture.py  cli_main.py  cli_ocr.py  cli_report.py  cli_report_batch.py  cli_report_longitudinal.py  cli_report_professor.py  cli_report_student.py  cli_report_warning.py  cli_select.py  cli_train.py  cli_train_grade.py  cohesion_analysis.py  concept_checker.py  concept_dependency.py  concept_network.py  config.py  config_validator.py  delivery_prepare.py  delivery_send.py  domain_concept_extractor.py  domain_coverage_analyzer.py  domain_coverage_charts.py  domain_coverage_report.py  domain_pedagogy_analyzer.py  embedding_cache.py  emphasis_map.py  ensemble_scorer.py  evaluation_io.py  evaluation_types.py  exam_generator.py  (+68 more)
tests/: conftest.py  test_adversarial.py  test_adversarial_023.py  test_adversarial_audit_cross.py  test_adversarial_audit_env.py  test_adversarial_audit_tier1.py  test_adversarial_audit_tier2.py  test_adversarial_audit_tier3.py  test_adversarial_audit_tier4.py  test_adversarial_config.py  test_adversarial_llm_ocr.py  test_adversarial_phase6_8.py  test_adversary_domain_coverage.py  test_adversary_domain_delivery_v2.py  test_adversary_phase3.py  test_adversary_phase4.py  test_adversary_phase56.py  test_adversary_student_longitudinal.py  test_adversary_v080.py  test_adversary_v090.py  test_adversary_v100.py  test_adversary_v110.py  test_adversary_v111.py  test_adversary_v120.py  test_audit_fixes.py  test_chart_utils.py  test_class_knowledge_aggregate.py  test_cli.py  test_cli_backfill_longitudinal.py  test_cli_deliver.py  test_cli_domain.py  test_cli_init.py  test_cli_intervention.py  test_cli_lecture.py  test_cli_main.py  test_cli_ocr.py  test_cli_ocr_compare.py  test_cli_ocr_week.py  test_cli_report.py  test_cli_report_batch.py  (+110 more)
