[project]
name = "formative-analysis"
version = "0.12.2"
description = "Formative assessment analysis tool for evaluating student understanding via knowledge graph matching"
authors = [
    {name = "Kwang-Seuk", email = "kjeong@bhug.ac.kr"},
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "konlpy>=0.6.0",
    "requests>=2.32.3",
    "pillow>=11.1.0",
    "matplotlib>=3.10.0,<4",
    "pandas>=2.2.3",
    "networkx>=3.4.2",
    "llvmlite>=0.39.0",
    "numpy<2.1.0",
    "kss>=6.0.4",
    "mecab-python3>=1.0.10",
    "mecab-ko-dic>=1.0.0",
    "wordcloud>=1.9.4",
    "scikit-learn>=1.4.0,<2.0.0",
    "hdbscan>=0.8.40",
    "bertopic>=0.16.4",
    "umap-learn>=0.5.7",
    "bert-score>=0.3.13",
    "sentence-transformers>=2.0.0",
    "reportlab>=4.4.4",
    "qrcode[pil]>=7.0",
    "pytesseract>=0.3.13",
    "opencv-python-headless>=4.12.0.88",
    "pyzbar>=0.1.9",
    "pyyaml>=6.0",
    "anthropic>=0.25.0,<2",
    "google-genai>=1.0.0",
    "scipy>=1.12.0,<2",
    "girth>=0.8.0",
    "stepmix>=2.2.3",
    "gspread>=6.0.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pylint>=3.3.3",
    "black>=24.10.0",
    "ruff>=0.8.0",
]
jupyter = [
    "ipykernel>=6.29.5",
    "qtconsole>=5.6.1",
    "jupyter>=1.1.1",
]

[project.scripts]
forma = "forma.cli_main:main"
forma-exam = "forma.cli:main"
forma-ocr = "forma.cli_ocr:main"
forma-eval = "forma.pipeline_evaluation:main"
forma-eval-batch = "forma.pipeline_batch_evaluation:main"
forma-report = "forma.cli_report:main"
forma-report-professor = "forma.cli_report_professor:main"
forma-report-batch = "forma.cli_report_batch:main"
forma-report-longitudinal = "forma.cli_report_longitudinal:main"
forma-init = "forma.cli_init:main"
forma-train = "forma.cli_train:main"
forma-report-warning = "forma.cli_report_warning:main"
forma-intervention = "forma.cli_intervention:main"
forma-train-grade = "forma.cli_train_grade:main"
forma-deliver = "forma.cli_deliver:main"
forma-select = "forma.cli_select:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Glyph \\d+ .* missing from font:UserWarning",
    "ignore:scipy.optimize.*L-BFGS-B.*deprecated:DeprecationWarning",
    "ignore:FigureCanvasAgg is non-interactive:UserWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forma"]
